infra/k8s/perm.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: perm-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      service: perm
  template:
    metadata:
      labels:
        service: perm
    spec:
      containers:
        - name: perm
          image: devd1st/perm
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "500Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "500m"
