infra/k8s/perm-mongodb.clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: perm-mongodb-clusterip
spec:
  type: ClusterIP
  selector:
    service: perm-mongodb
  ports:
    - port: 27017
      targetPort: 27017
