infra/k8s/perm.clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: perm-clusterip
spec:
  type: ClusterIP
  selector:
    service: perm
  ports:
    - port: 3000
      targetPort: 3000
